--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background-color: #fde3e4;">
 	<div class="login-box">
 		 <form>
-	<a href="https://t.me/Алена">
+	<a href="https://t.me/darksonggg">
       <span></span>
       <span></span>
       <span></span>
@@ -33,5 +33,28 @@
 	<div class="five_pic" style="position: absolute;transform: rotate(-30deg);top: 140px;left: 210px;">
 		<img  class="five_img" src="Рисунок6.png" alt="" height="300px" width="350px">
 	</div>
+	<script type="module">
+		// Import the functions you need from the SDKs you need
+		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-app.js";
+		// TODO: Add SDKs for Firebase products that you want to use
+		// https://firebase.google.com/docs/web/setup#available-libraries
+	  
+		// Your web app's Firebase configuration
+		const firebaseConfig = {
+		  apiKey: "AIzaSyBKo755yeYMvN9_1LihsMTg5UXrXS8rVk0",
+		  authDomain: "alenkahb-8b257.firebaseapp.com",
+		  projectId: "alenkahb-8b257",
+		  storageBucket: "alenkahb-8b257.appspot.com",
+		  messagingSenderId: "246300522308",
+		  appId: "1:246300522308:web:8f43ccd55b756e00d10911"
+		};
+	  
+		// Initialize Firebase
+		const app = initializeApp(firebaseConfig);
+	  </script>
+	  <div class="happy"> 
+	  	<p>Поздравьте мою любимую Аленку с днём рождения!</p>
+	  </div>
+	  
 </body>
 </html>
