--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ i love you so much
 	</section>
 	<section class="two" >
 		<div class="two_pick" >
-			<img class="two_cvet" src="pict.jpg" alt="" width="250px" height="230px" data-aos="fade-left">
+			<img class="two_cvet" src="pict.jpg" alt="" width="250px" height="230px" data-aos="fade-up"
+     data-aos-duration="3000">
 			<p>seize the moment</p>
 		</div>
 		<div class="vl"></div>
@@ -44,7 +45,8 @@ i love you so much
 	</section>
 	<section class="three">
 		<div class="three_pick">
-			<img class="three_cvet" src="aur.jpg" alt="" width="250px" height="250px">
+			<img class="three_cvet" src="aur.jpg" alt="" width="250px" height="250px" data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
 			<p>be happy</p>
 		</div>
 	</section>
