--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@ i love you so much
 	</section>
 	<section class="three">
 		<div class="three_pick">
-			<img class="three_cvet" src="aur.jpg" alt="" width="250px" height="250px" data-aos="fade-up"
-     data-aos-anchor-placement="bottom-bottom">
+			<img class="three_cvet" src="aur.jpg" alt="" width="250px" height="250px" data-aos="fade-right"
+     data-aos-offset="300"
+     data-aos-easing="ease-in-sine">
 			<p>be happy</p>
 		</div>
 	</section>
