--- a/index.html
+++ b/index.html
@@ -45,10 +45,20 @@ i love you so much
 	</section>
 	<section class="three">
 		<div class="three_pick">
+			<div class="vl2"></div>
 			<img class="three_cvet" src="aur.jpg" alt="" width="250px" height="250px" data-aos="fade-right"
      data-aos-offset="300"
      data-aos-easing="ease-in-sine">
 			<p>be happy</p>
+		</div>
+		<div class="four">
+			<div class="vl3"></div>
+			<div class="line2"></div>
+			<img class="four_cvet" src="ruki.jpg" alt="" width="150px" height="100px" data-aos="zoom-out">
+			<div class="four_text">
+				<p>Stand. Stop for a second and look at the world that surrounds you.</p>
+			</div>
+			<img class="five_cvet" src="poezd.jpg" alt="" width="180px" height="210px" data-aos="zoom-out">
 		</div>
 	</section>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
