--- a/index.html
+++ b/index.html
@@ -54,11 +54,18 @@ i love you so much
 		<div class="four">
 			<div class="vl3"></div>
 			<div class="line2"></div>
+			<div class="cont">
 			<img class="four_cvet" src="ruki.jpg" alt="" width="150px" height="100px" data-aos="zoom-out">
 			<div class="four_text">
 				<p>Stand. Stop for a second and look at the world that surrounds you.</p>
 			</div>
-			<img class="five_cvet" src="poezd.jpg" alt="" width="180px" height="210px" data-aos="zoom-out">
+		</div>
+			
+			
+			<div class="five">
+				<img class="five_cvet" src="poezd.jpg" alt="" width="180px" height="210px" data-aos="zoom-out">
+			</div>
+			
 		</div>
 	</section>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
